# pt-edge

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  glama.json  pyproject.toml  render.yaml  requirements.txt
.claude/: CLAUDE.md
app/: backfill_embeddings.py  briefing_refresh.py  briefings_seed.py  db.py  embeddings.py  github_client.py  main.py  methodology_seed.py  settings.py
cli/: README.md  pyproject.toml
cli/ptedge/: __init__.py  cli.py  client.py
docs/: ai-supply-thesis.md  architecture.md  audit-implementation-plan.md  audit-worker-to-site.md  commercial-plan.md  cyber-future-work.md  cyber-redesign-next.md  development.md  domain-launch-checklist.md  edge-discoveries.md  edge-playbook.md  hidden-sections.md  north-star.md  roadmap-audit-2026-04-02.md  roadmap-product-improvements.md  roadmap.md  site-audit.md  strategy.md  vision.md  worker-audit-2026-04-13.md  worker-fix-plan.md  worker-incident-analysis.md
scratch/: revised-domain-expansion.md
scripts/: audit_coverage.py  backfill_created_at.py  backfill_embeddings_1536.py  backfill_summaries.py  backfill_v2ex.py  dedup_projects.sql  diagnose_snapshot_gaps.py  discover_categories.py  export_dataset.py  fix_category_labels.py  generate_deep_dives.py  generate_redirects.py  generate_site.py  gsc_auth.py  gsc_list_sites.py  ingest_ai_repos.py  ingest_all.py  ingest_dockerhub.py  ingest_downloads.py  ingest_github.py  ingest_gsc.py  ingest_hn.py  ingest_releases.py  ingest_vscode.py  ingest_worker.py  insert_deep_dive.py  manage_api_keys.py  novel_concept_detector.py  push_dataset.sh  push_to_huggingface.sh  reassign_domains.py  refresh_views.py  seed.py  start.sh  trigger_ingest.sh  umami_analytics_views.sql  validate_novel_concepts.py  weekly_structural.py
seeds/: labs.json  projects.json
templates/: about.html  api_docs.html  base.html  categories_index.html  category.html  cli_docs.html  comparison.html  (+10 more)
(+416 files in other folders)
