[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptedge-cli"
version = "0.1.0"
description = "CLI for PT-Edge AI ecosystem intelligence"
# readme = "README.md"  # will add before publishing
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]

[project.scripts]
ptedge = "ptedge.cli:main"

[project.urls]
Homepage = "https://mcp.phasetransitions.ai"
API = "https://mcp.phasetransitions.ai/api/docs"

[tool.hatch.build.targets.wheel]
packages = ["ptedge"]
