[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptedge-cli"
version = "0.1.1"
description = "CLI for PT-Edge AI ecosystem intelligence — query 220K+ repos from your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Graham Rowe", email = "graham@phasetransitions.ai" },
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
ptedge = "ptedge.cli:main"

[project.urls]
Homepage = "https://mcp.phasetransitions.ai"
Repository = "https://github.com/grahamrowe82/pt-edge"
API = "https://mcp.phasetransitions.ai/api/docs"
Issues = "https://github.com/grahamrowe82/pt-edge/issues"

[tool.hatch.build.targets.wheel]
packages = ["ptedge"]
